# capstone-online-library

./: .gitignore  Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt  rubric.md
book/: admin.py  context_processors.py  forms.py  models.py  views.py
book/migrations/: 0001_initial.py  0002_alter_book_image_file.py  0002_alter_book_text.py  0002_auto_20211004_1854.py  0002_auto_20211005_1922.py  0002_comment_user.py  0003_alter_book_image_file.py  0003_alter_book_text.py  0003_alter_comment_post.py  0004_alter_book_image_file.py  0004_alter_book_text.py  0005_alter_book_image_file.py  0006_alter_book_image_file.py  0007_alter_book_image_file.py  0008_alter_book_image_file.py
book/templatetags/: book_extras.py
checkout/: models.py  views.py
config/: settings.py  urls.py
custom_user/: admin.py  forms.py  models.py  views.py
custom_user/migrations/: 0001_initial.py  0002_alter_customuser_checked_out_books.py  0002_alter_customuser_profile_image.py  0002_customuser_reserved_books.py  0003_alter_customuser_profile_image.py  0003_merge_20211007_1604.py  0004_alter_customuser_checked_out_books.py  0004_alter_customuser_profile_image.py  0005_alter_customuser_profile_image.py  0006_alter_customuser_profile_image.py  0007_remove_customuser_profile_image.py  (+1 more)
notification/: models.py  views.py
reservations/: views.py
templates/: 400.html  403.html  404.html  500.html  all_books.html  base.html  book_detail.html  customuser_confirm_delete.html  generic.html  index.html  nav.html  no_nots.html  notifications.html  profile.html  user_error.html
(+10 files in other folders)
