[tool.poetry]
name = "capstone-online-library"
version = "0.1.0"
description = ""
authors = ["Nicholas Dudash <nddudash@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
Pillow = "^8.3.2"
psycopg2-binary = "^2.9.1"
django-heroku = "^0.3.1"
dephell = "^0.8.3"
gunicorn = "^20.1.0"
cloudinary = "^1.26.0"
django-cloudinary-storage = "^0.3.0"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
